## Makefile.am -- Process this file with automake to produce Makefile.in
## Copyright (C) 2003 Ricardo Fabbri
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2, or (at your option)
## any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

images = ararauna.jpg ararauna.png bin.png bin.xpm disks2.bmp disks.bmp escher.png example.bmp example.png gra.jpg indian.bmp noisypoly.bmp onca.gif onca.png plate.gif r.gif sip.gif star.bmp template.jpg tru.jpg 
imagedir=@TOOLBOXDIR@/images
image_DATA = $(images) ABOUT.txt
EXTRA_DIST = $(images) ABOUT.txt

SUBDIRS = photonics
